(Workspace) Deps: Grouped several logging deps in common

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,3 +15,7 @@ repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
 xailyser-common = { path = "../common" }
+
+# Logging
+fern = "0.7.1"
+log = "0.4.25"
