--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,6 +20,7 @@ crossbeam = "0.8.4"
 fern = "0.7.1"
 log = "0.4.25"
 pnet = "0.35.0"
+serde = { version = "1.0.217", features = ["derive"] }
 thiserror = "2.0.11"
 toml = "0.8.19"
 tungstenite = "0.26.1"
