(Client) Deps: `thiserror`, serialization crates, etc.

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,6 +16,9 @@ repository = "https://github.com/xairaven/xailyser"
 [dependencies]
 xailyser-common = { path = "../common" }
 
-# Logging
+directories = "6.0.0"
 fern = "0.7.1"
 log = "0.4.25"
+serde = { version = "1.0.217", features = ["derive"] }
+thiserror = "2.0.11"
+toml = "0.8.19"
