--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,6 +17,12 @@ repository = "https://github.com/xairaven/xailyser"
 xailyser-common = { path = "../common" }
 
 directories = "6.0.0"
+egui = "0.30.0"
+eframe = { version = "0.30.0", default-features = false, features = [
+    "default_fonts",
+    "glow",
+    "wayland",
+] }
 fern = "0.7.1"
 log = "0.4.25"
 serde = { version = "1.0.217", features = ["derive"] }
