--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/xairaven/xailyser"
 [dependencies]
 xailyser-common = { path = "../common" }
 
+crossbeam = "0.8.4"
 directories = "6.0.0"
 egui = "0.30.0"
 eframe = { version = "0.30.0", default-features = false, features = [
@@ -25,6 +26,8 @@ eframe = { version = "0.30.0", default-features = false, features = [
 ] }
 fern = "0.7.1"
 log = "0.4.25"
+rand = "0.8.5"
 serde = { version = "1.0.217", features = ["derive"] }
 thiserror = "2.0.11"
 toml = "0.8.19"
+tungstenite = "0.26.1"
