--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,4 +16,5 @@ repository = "https://github.com/xairaven/xailyser"
 [dependencies]
 chrono = "0.4.39"
 log = "0.4.25"
+serde = { version = "1.0.217", features = ["derive"] }
 thiserror = "2.0.11"
