--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -15,6 +15,8 @@ repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
 chrono = "0.4.39"
+hex = "0.4.3"
 log = "0.4.25"
 serde = { version = "1.0.217", features = ["derive"] }
+sha2 = "0.10.8"
 thiserror = "2.0.11"
