--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -25,6 +25,7 @@ eframe = { version = "0.30.0", default-features = false, features = [
     "wayland",
 ] }
 fern = "0.7.1"
+http = "1.2.0"
 log = "0.4.25"
 rand = "0.9.0"
 serde = { version = "1.0.217", features = ["derive"] }
