--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ repository = "https://github.com/xairaven/xailyser"
 xailyser-common = { path = "../common" }
 
 crossbeam = "0.8.4"
+ctrlc = "3.4.5"
 fern = "0.7.1"
 log = "0.4.25"
 pnet = "0.35.0"
