--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -29,6 +29,7 @@ http = "1.2.0"
 log = "0.4.25"
 rand = "0.9.0"
 serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 thiserror = "2.0.11"
