--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ xailyser-common = { path = "../common" }
 crossbeam = "0.8.4"
 directories = "6.0.0"
 egui = "0.31.0"
+egui-aesthetix = { path = "../egui-aesthetix", features = ["all_themes"]}
 eframe = { version = "0.31.0", default-features = false, features = [
     "default_fonts",
     "glow",
