--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -29,6 +29,7 @@ fern = "0.7.1"
 http = "1.2.0"
 log = "0.4.25"
 rand = "0.9.0"
+semver = "1.0.25"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 strum = "0.26.3"
