(Client) Deps: Added `chrono`

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/xairaven/xailyser"
 [dependencies]
 xailyser-common = { path = "../common" }
 
+chrono = "0.4.39"
 crossbeam = "0.8.4"
 directories = "6.0.0"
 egui = "0.31.0"
