--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "xailyser-client"
+name = "client"
 version = "0.0.1"
 authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
 
 edition = "2024"
-rust-version = "1.85"
+rust-version = "1.86"
 
 categories = ["network-programming"]
 keywords = ["networking", "routers", "monitoring"]
@@ -14,7 +14,7 @@ license = "GPL-3"
 repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
-xailyser-common = { path = "../common" }
+common = { path = "../common" }
 
 chrono = "0.4.40"
 crossbeam = "0.8.4"
@@ -28,7 +28,7 @@ eframe = { version = "0.31.1", default-features = false, features = [
 ] }
 fern = "0.7.1"
 http = "1.3.1"
-log = "0.4.26"
+log = "0.4.27"
 rand = "0.9.0"
 semver = "1.0.26"
 serde = { version = "1.0.219", features = ["derive"] }
