--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -14,3 +14,4 @@ license = "GPL-3"
 repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
