--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,7 +23,7 @@ crossbeam = "0.8.4"
 ctrlc = "3.4.6"
 fern = "0.7.1"
 log = "0.4.27"
-pnet = "0.35.0"
+pcap = "2.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
