--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,6 +18,7 @@ dpi = { path = "../dpi" }
 
 chrono = "0.4.40"
 crossbeam = "0.8.4"
+flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
 hex = "0.4.3"
 log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
