--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -14,4 +14,6 @@ license = "GPL-3"
 repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
+libc = "0.2.169"
+pcap = "2.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
