--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,6 +2,7 @@
 name = "client"
 version = "0.0.1"
 authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
+build = "build.rs"
 
 edition = "2024"
 rust-version = "1.86"
@@ -15,6 +16,7 @@ repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
 common = { path = "../common" }
+dpi = { path = "../dpi" }
 
 chrono = "0.4.40"
 crossbeam = "0.8.4"
@@ -30,6 +32,7 @@ http = "1.3.1"
 log = "0.4.27"
 rand = "0.9.1"
 rust-i18n = "3.1.4"
+pcap = "2.2.0"
 semver = "1.0.26"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
