--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,9 +30,10 @@ eframe = { version = "0.31.1", default-features = false, features = [
 fern = "0.7.1"
 http = "1.3.1"
 log = "0.4.27"
-rand = "0.9.1"
-rust-i18n = "3.1.4"
 pcap = "2.2.0"
+rand = "0.9.1"
+rfd = "0.15.3"
+rust-i18n = "3.1.4"
 semver = "1.0.26"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
