--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dpi"
 version = "0.0.1"
 authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
+build = "build.rs"
 
 edition = "2024"
 rust-version = "1.86"
@@ -17,3 +18,6 @@ repository = "https://github.com/xairaven/xailyser"
 libc = "0.2.172"
 pcap = "2.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
+
+[dev-dependencies]
+hex = "0.4.3"
