--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -17,7 +17,7 @@ repository = "https://github.com/xairaven/xailyser"
 [dependencies]
 libc = "0.2.172"
 pcap = "2.2.0"
-serde = { version = "1.0.219", features = ["derive"] }
-
-[dev-dependencies]
 hex = "0.4.3"
+serde = { version = "1.0.219", features = ["derive"] }
+strum = "0.27.1"
+strum_macros = "0.27.1"
