--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -21,3 +21,4 @@ hex = "0.4.3"
 serde = { version = "1.0.219", features = ["derive"] }
 strum = "0.27.1"
 strum_macros = "0.27.1"
+thiserror = "2.0.12"
