--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -18,6 +18,7 @@ repository = "https://github.com/xairaven/xailyser"
 libc = "0.2.172"
 pcap = "2.2.0"
 hex = "0.4.3"
+num_enum = "0.7.3"
 nom = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
