--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -15,6 +15,7 @@ license = "GPL-3"
 repository = "https://github.com/xairaven/xailyser"
 
 [dependencies]
+csv = "1.3.1"
 libc = "0.2.172"
 pcap = "2.2.0"
 hex = "0.4.3"
