(DPI) Deps: Returned `strum`

--- a/dpi/Cargo.toml
+++ b/dpi/Cargo.toml
@@ -23,4 +23,6 @@ num_enum = { version = "0.7.3", features = ["complex-expressions"] }
 nom = "8.0.0"
 radix-tree = "0.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
+strum = "0.27.1"
+strum_macros = "0.27.1"
 thiserror = "2.0.12"
