--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,6 +91,7 @@ jobs:
   create-release:
     name: "Create Release"
     runs-on: ubuntu-latest
+    permissions: write-all
     needs: [ build ]
     steps:
       - name: Download artifacts to release
