(Workflows) Fix: Right client paths

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,19 +57,31 @@ jobs:
       - name: Archive files on Ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: |
-          tar -czvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-ubuntu.tar.gz client/assets client/locales resources -C target/release/ client
+          tar -czvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-ubuntu.tar.gz \
+            -C client assets \
+            -C client locales \
+            -C . resources \
+            -C target/release client
           tar -czvf ${{env.PROJECT_NAME}}-server-v${{ github.ref_name }}-ubuntu.tar.gz -C target/release/ server
 
       - name: Archive files on macOS
         if: matrix.os == 'macos-latest'
         run: |
-          tar -czvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-macos.tar.gz client/assets client/locales resources -C target/release/ client
+          tar -czvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-macos.tar.gz  \
+            -C client assets \
+            -C client locales \
+            -C . resources \
+            -C target/release client
           tar -czvf ${{env.PROJECT_NAME}}-server-v${{ github.ref_name }}-macos.tar.gz -C target/release/ server
 
       - name: Archive files on Windows
         if: matrix.os == 'windows-latest'
         run: |
-          tar acvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-windows.tar.gz client/assets client/locales resources -C target/release/ client.exe
+          tar acvf ${{env.PROJECT_NAME}}-client-v${{ github.ref_name }}-windows.tar.gz  \
+            -C client assets \
+            -C client locales \
+            -C . resources \
+            -C target/release client.exe
           tar acvf ${{env.PROJECT_NAME}}-server-v${{ github.ref_name }}-windows.tar.gz -C target/release/ server.exe
 
       - name: Upload client artifact
@@ -107,5 +119,9 @@ jobs:
           title: ${{ github.ref_name }}
           prerelease: false
           files: |
-            Client-*
-            Server-*
+            Client-windows-v${{ github.ref_name }}
+            Server-windows-v${{ github.ref_name }}
+            Client-ubuntu-v${{ github.ref_name }}
+            Server-ubuntu-v${{ github.ref_name }}
+            Client-macos-v${{ github.ref_name }}
+            Server-macos-v${{ github.ref_name }}
