(Workspace) Deps: Migrated to Rust `1.88`

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
 build = "build.rs"
 
 edition = "2024"
-rust-version = "1.87"
+rust-version = "1.88"
 
 categories = ["network-programming"]
 keywords = ["networking", "routers", "monitoring"]
@@ -13,6 +13,9 @@ keywords = ["networking", "routers", "monitoring"]
 readme = "../README.md"
 license = "GPL-3"
 repository = "https://github.com/xairaven/xailyser"
+
+[lints]
+workspace = true
 
 [dependencies]
 common = { path = "../common" }
