--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,16 @@ lto = true
 opt-level = 3
 panic = "abort"
 strip = "symbols"
+
+[workspace.lints.clippy]
+expect_used = "deny"
+panic = "deny"
+unwrap_used = "deny"
+
+collapsible_if = "warn"
+collapsible_else_if = "warn"
+collapsible_match = "warn"
+collapsible_str_replace = "warn"
+
+[workspace.lints.rust]
+unsafe_code = "deny"
